--- a/contents/css/main.css
+++ b/contents/css/main.css
@@ -285,6 +285,12 @@ footer .copy, footer .copy a {
   letter-spacing: 1px;
 }
 
+.article iframe {
+  width: 100%;
+  border:0.5em solid #EEE;
+  padding:0.5em;
+}
+
 /* archive */
 
 .archive {
@@ -359,12 +365,12 @@ pre code {
 }
 
 p code {
-  padding: 0.1em 0.3em 0.2em;
+  padding: 0.15em 0.3em 0.2em;
   border-radius: 0.3em;
   position: relative;
   top: -0.15em;
-  background: #444;
-  color: #fff;
+  background: #CCC;
+  color: #444;
   white-space: nowrap;
 }
 
