--- a/templates/article.jade
+++ b/templates/article.jade
@@ -1,4 +1,5 @@
 
+
 extends layout
 
 block append vars
@@ -21,4 +22,18 @@ block prepend footer
   div.nav
     a(href=contents.index.url) « Full blog
 
+block append footer
+
+  div#disqus_thread
+
+  script.
+    var disqus_shortname = '<danheberden>'; // Required - Replace example with your forum shortname
+    var disqus_url = '#{locals.url}/#{ page.filepath.relative.replace(/\/index\.md$/, '') }';
+
+      /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+      var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+      dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
 
