--- a/contents/css/main.css
+++ b/contents/css/main.css
@@ -101,7 +101,7 @@ hr {
 }
 
 .header .author {
-  font-family: 'Merriweather', serif;
+  font-family: serif;
   font-variant: small-caps;
   text-transform: lowercase;
   text-rendering: auto;
@@ -277,7 +277,7 @@ footer .copy, footer .copy a {
 }
 
 .more, .date {
-  font-family: 'Merriweather', serif;
+  font-family: serif;
   font-variant: small-caps;
   text-transform: lowercase;
   font-weight: 400;
@@ -329,7 +329,7 @@ footer .copy, footer .copy a {
 .archive .year-label,
 .archive .month-label{
   width: 4em;
-  font-family: 'Merriweather', serif;
+  font-family: serif;
   font-variant: small-caps;
   text-transform: lowercase;
   font-weight: 400;
